# AI-Principle-and-Techniques-Final-Project

./: README.md  requirements.txt  run_demo.py
ros2_navigation/: CMakeLists.txt  README.md  package.xml
ros2_navigation/config/: navigation_params.yaml
ros2_navigation/launch/: robot_launch.py  sim_launch.py  world_launch.py
ros2_navigation/scripts/: navigation_node.py  simple_nav_demo.py
ros2_navigation/urdf/: three_wheel_robot.urdf.xacro
ros2_navigation/worlds/: ethiopia_cities.sdf  ethiopia_cities.world
ros2_navigation/worlds/assets/labels/: adama.ppm  addis_ababa.ppm  ambo.ppm  arba_minch.ppm  axum.ppm  bahir_dar.ppm  debre_berhan.ppm  dessie.ppm  dire_dawa.ppm  gondar.ppm  harar.ppm  jimma.ppm  konso.ppm  lalibela.ppm  mekelle.ppm  moyale.ppm  wolaita_sodo.ppm
traveling_ethiopia/: __init__.py  astar.py  graph.py  main.py  minimax.py  search_strategies.py  ucs.py  visualize.py
