<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>traveling_ethiopia_robot</name>
  <version>1.0.0</version>
  <description>
    Three-wheel robot for navigating Ethiopian cities using search algorithms.
    AI Principles and Techniques Course Project - Question 5
  </description>
  
  <maintainer email="student@aau.edu.et">AAU Student</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  
  <depend>ros_gz_bridge</depend>
  <depend>xacro</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
